--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,40 @@
   margin-left:1%;
   margin-top:2%;
 }
+
+#customInput {
+  display: inline;  
+  width: 50%;
+}
+
+.mb-3, .my-3 {
+  /* margin-bottom: 1rem!important; */
+  margin-left: 5px;
+  top: 4px;
+  position: relative;
+}
+
+.itemsList{
+  width:60%;
+}
+
+/* Portrait and Landscape */
+@media only screen 
+  and (max-width: 480px)
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+    .itemsList{
+      width:100%;
+    }
+
+    .btn{
+      padding:7px !important;
+    }
+
+    #customInput{
+      width:60%;
+    }
+
+}
